# lyceum

./: .env.example  .flake8  API_DOCUMENTATION.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_FIXES.md  DEVELOPMENT_GUIDE.md  DOCSTRING_TEMPLATE.md  GUTENBERG_FIXES.md  README.md  SHARED_RESOURCES.md  SUMMARY.md  SYSTEM_CERTIFICATION.md  docker-compose.yml  init-mongo.js  pyproject.toml  restart-database.sh  start-services.sh  test_services.py
galileo/: config.yaml  generate_concept.md  (+4 more)
thales/: README.md  pyproject.toml  setup.py
thales/config/: database_config.yaml  simulator_config.yaml  test_scenarios.yaml
thales/docs/: module_structure.md
thales/integration_tests/config/: database_config.yaml  test_scenarios.yaml
thales/scripts/: run_integration_tests.sh  run_simulator.sh  run_simulator_tests.sh  stop_simulator.sh  test_resilience.sh
thales/scripts/simulators/: start_simulators.py
thales/src/thales/: __init__.py  cli.py
thales/src/thales/database/: __init__.py  consistency.py  inspector.py
thales/src/thales/diagnostics/: error_analyzer.py  error_collector.py
thales/src/thales/generators/: __init__.py  concept_generator.py
thales/src/thales/load/: load_tester.py
thales/src/thales/runners/: integration_runner.py
thales/src/thales/simulators/: service_simulator.py
thales/tests/: conftest.py  test_cli.py
thales/tests/database/: test_consistency.py  test_inspector.py
thales/tests/generators/: test_concept_generator.py
thales/tests/integration/: conftest.py  test_load_resilience.py  test_ptolemy_gutenberg.py  test_real_services.py
(+194 files in other folders)
